--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "ytdl-core": "^4.11.5",
     "ytdlp-nodejs": "^0.1.4"
   }
 }
